methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:35: error: not found: value seDecaler
    seDecaler();
    ^